style.css
.headshot {
  width: 100%;
  max-width: 280px;
}

.bg-purple {
  background-color: #6f42c1; /* --bs-purple */
}

.social-icon {
  width: 28px;
  height: 28px;
  margin-left: 3px;
  margin-right: 3px;
}

#rounded-icon {
  border-radius: 17%;
}

.image-full-width {
  width: 100%;
}

.image-49-width {
  width: 49%;
}

.image-grid {
  width: 49%;
  padding-right: 8px;
  padding-bottom: 12px;
}

.image-wrap-text-left {
  float: left;
  width: 33%;
  padding-right: 4%;
  padding-bottom: 0.5%;
}

.image-wrap-text-right {
  float: right;
  width: 33%;
  padding-left: 4%;
  padding-bottom: 0.5%;
}

.image-wrap-text-right-landscape {
  float: right;
  width: 50%;
  padding-left: 4%;
  padding-bottom: 0.5%;
}

.image-wrap-caption-left {
  float: left;
  padding-bottom: 4%;
  width: 100%;
}

.image-wrap-caption-right {
  float: right;
  padding-bottom: 4%;
  width: 100%;
}

.image-wrap-caption {
  float: center;
  padding-bottom: 4%;
  width: 100%;
}

figcaption {
  color: #6c757d; /* text-muted */
  /* font-style: italic; */
}

.text-award {
  color: #bf40fa;
  font-weight: 600;
}

.textbox {
  background-color: #f5ecff;
  padding: 20px;
  margin: 20px 20px 20px 0px;
}

.btn {
  background-color: #46218a;
  border-color: #46218a;
  color: white;
}

.btn:hover, .btn.active, .btn.focus, .btn:focus {
  background-color: #6f42c1;
  border-color: #6f42c1;
  color: white;
  box-shadow: 0 0 0 0.25rem #6e42c13f;
}

.expandButton {
  width: 144px;
}

.quote {
  position: relative;
}

.quote::before {
  content: '';
  display: block;
  left: 0;
  top: 0;
  width: 5px;
  position: absolute;
  height: 100%;
  background-color: #dddddd;
  border-radius: 2.5px;
}

/* Spacing */

.pad-10 {
  padding: 10px;
}

.pad-left-5 {
  padding-left: 5px;
}

.pad-left-20 {
  padding-left: 20px;
}

.pad-top-10 {
  padding-top: 10px;
}

.pad-top-20 {
  padding-top: 20px;
}

.pad-top-30 {
  padding-top: 30px;
}

.margin-right-10 {
  margin-right: 10px;
}

/* Navbar */

.dropdown:hover .dropdown-menu {
  display: block;
}

.dropdown-menu {
  border: none;
  border-radius: 0px;
  padding: 0px;
}

.dropdown-item {
  background-color: #46218a;
  padding: 5px;
}

.dropdown-item.active {
  background-color: #250857;
}

.dropdown-item:hover {
  background-color: #250857;
}

